adjust gantt and add research summary

--- a/main.tex
+++ b/main.tex
@@ -151,13 +151,15 @@ These objectives raise the following research questions:
     \item To what extent can acoustic reflections from cooling holes be used to monitor temperature at a number of locations across the structure of an NGV? \label{itm:5}
     \item What is the most suitable transducer configuration for exciting Lamb waves in NGVs? \label{itm:6}
 \end{enumerate}
-\newpage
+
+Upon completion of the PhD the research questions listed above will have been addressed, which will lead to a conclusion on how a guided wave based temperature monitoring system can be implemented on a nozzle guide vane. The effect of the physical environment on wave propagation will be known, and the most suitable modal region of temperature monitoring will have been identified. The extent to which the wave interaction with cooling holes can be used to monitor temperature at a number of locations will be known. A measurement system that can theoretically operate at high temperatures will have been identified. The outcome of these studies can form the basis of future investigations into the design of a measurement system suitable for use at high temperatures, and the testing of a system on an installed NGV. 
 
 \section{Research output}
 \begin{itemize}
-    \item Student poster ``Temperature Monitoring Of Nozzle Guide Vanes (NGVs) Using Ultrasonic Guided Waves'' presented at \href{https://event.asme.org/Turbo-Expo}{ASME Turbo Expo 2020.} Virtual conference 21--25 September 2020.
+    \item Student poster ``Temperature monitoring of nozzle guide vanes (NGVs) using ultrasonic guided waves'' presented at \href{https://event.asme.org/Turbo-Expo}{ASME Turbo Expo 2020.} Virtual conference 21--25 September 2020.
     \item Journal review paper ``Surface temperature condition monitoring methods for aerospace turbomachinery: exploring the use of ultrasonic guided waves''~\cite{Yule2021} published to \href{https://iopscience.iop.org/journal/0957-0233}{IOP Measurement, Science, and Technology.}
     \item Conference paper ``Towards in-flight temperature monitoring for nozzle guide vanes using ultrasonic guided waves'' accepted for \href{https://www.aiaa.org/propulsionenergy}{AIAA Propulsion Energy}, 9--11 August 2021.
+    \item Journal paper on the COMSOL modelling of a guided wave sensor system for harsh environments to be submitted to \href{https://www.mdpi.com/journal/sensors}{MDPI Sensors} in the near future.
 \end{itemize}
 
 \chapter{Nozzle guide vane (NGV) temperature monitoring}\label{literev}
@@ -755,7 +757,7 @@ An experimental investigation has been carried out in order to validate theoreti
 
 It is clear that wedge transducers are not the optimum method of transmitting/receiving a wave through a nozzle guide vane at high temperatures. They cannot be permanently mounted to the structure due to the need for a liquid couplant, and their relatively large footprint would make finding a suitable mounting location a challenge. Their operation at high temperatures is limited by the wedge material, which in the case of acrylic melts at around 160\si{\degreeCelsius}. The wedge material needs to have a longitudinal wave velocity less than that of the targeted Lamb wave phase velocity, which limits the choice of material severely, mostly to plastics with low melting points. The great benefit of wedge transducers is the ability to selectively target Lamb wave modes, which reduces the complexity of data analysis compared with exciting multiple modes simultaneously. This is difficult to achieve using other transducer configurations but it may instead be possible to excite a higher order region that travels as a single wave packet. The use of PWAS transducers could allow for operation at high temperatures (assuming suitable choice of piezoelectric material) and would be relatively easy to mount to an NGV structure, having a small footprint, although the high temperatures are likely to make bonding difficult. Another option is to couple into the structure using waveguides, distancing the transducers from the high temperature environment. Future research will investigate the temperature sensitivity of higher order modes (such as $A_1$ and $S_1$), as operating at higher frequencies can improve resolution (allowing for the detection of smaller phase shifts) and response rates. The ability to monitor wave velocity variations in multi-modal wave packets will also be considered when investigating transducer configurations suitable for higher temperature operation.
 
-\chapter{Plan}\label{plan}
+\chapter{Research summary \& future plans}\label{plan}
 
 \section{Research summary}
 
@@ -783,12 +785,11 @@ Prior to the 18 month confirmation review the following research has been undert
     \item The effect of thermal barrier coatings (TBCs) on wave propagation will be investigated using COMSOL models. This study will partially answer research question~\ref{itm:3}. 
     \item To operate at higher temperatures a new transducer configuration will be required. The most suitable option is to distance the transducers away from the high temperatures using waveguides, coupling into the test structure using a system of Hertzian contact points. COMSOL simulations will be used to investigate the potential of this method. This study will partially answer research question~\ref{itm:6}. 
     \item Depending on the outcome of the previous COMSOL study and time constraints, a waveguide system will be tested experimentally. This study will partially answer research question~\ref{itm:6}. 
-    \item A journal or conference paper submission will be prepared that focuses on the COMSOL~modelling and analysis of Lamb wave propagation. 
 \end{itemize}
 
 \section{Gantt chart}
 
-\includepdf[landscape=true,fitpaper=true]{./figures/Gantt_Chart.pdf}
+\includepdf[landscape=true,fitpaper=true]{./figures/gantt.pdf}
 
 %\printbibliography
 \bibliographystyle{ieeetr}
